--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Rides-plus</title>
-  </head>
-  <body>
+    <title>Project</title>
+</head>
+
+<body>
     <div id="root"></div>
-  </body>
+</body>
+
 </html>
